feat: implementing login flow

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,3 +37,8 @@ server:
 logging:
   level:
     org.hibernate.orm.connections.pooling: WARN
+
+app:
+  jwt:
+    secret: ${JWT_SECRET:39915a93b904dd83a4a50ee5051dface1cfe12ea}
+    expiration: 3600
