--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@expo-google-fonts/sora": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
