--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,8 @@
     "expo": "~54.0.23",
     "expo-blur": "^15.0.7",
     "expo-font": "~14.0.9",
+    "expo-print": "^15.0.7",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
